added experience badge and made featured section responsive

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                     <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
             </div>
-            <div>
+            <di class="featured-architect">
                 <img src="images/architect.png" alt="">
-                <button id="experience-bardge" class="btn-primary">
+                <button id="experience-badge" class="btn-primary">
                     <span id="experience-year">10+Years</span>
                     <br>
                     <span>experience</span>
@@ -130,7 +130,11 @@
           </section>
     </main>
     <footer>
-
+        <nav>
+            <div class="footer-info">
+                <p class="text-light-grey">All rights reserved copyright@2023 startup landing page design</p>
+           </div>
+        </nav>
     </footer>
 </body>
 </html>
